# queson

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  queson.pyi
.github/workflows/: CI.yml
benchmarks/: benchtemplate.py  run_all  runtest_apjson.py  runtest_json.py  runtest_orjson.py  runtest_queson.py
benchmarks/testfiles/: jsonmsg-1.json  jsonmsg-23.json  jsonmsg-5.json  jsonmsg-7.json  oops-all-bigints.json  oops-all-ints.json
src/: de.rs  lib.rs  ser.rs  simd.rs  thunk.rs
tests/: test_apjson.py  test_queson.py
