[package]
name = "apjson"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false
opt-level = 3
codegen-units = 1
strip = "symbols"
lto = "fat"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "apjson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
zmij = "1.0.21"
