[package]
name = "queson"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[features]
default = ["pymem-alloc"]
pymem-alloc = []

[profile.release]
debug = false
opt-level = 3
codegen-units = 1
strip = "symbols"
lto = "fat"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "queson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
zmij = "1.0.21"

[build-dependencies]
pyo3-build-config = { version = "0.27.0", features = ["resolve-config"] }
